# fprettier

./: Cargo.toml  LICENSE-MIT  README.md
examples/in/: example_swapcase.f90
src/: cli.rs  config.rs  directive.rs  error.rs  lib.rs  main.rs
src/format/: aligner.rs  case_convert.rs  continuation.rs  indenter.rs  line_split.rs  mod.rs  replacements.rs  whitespace.rs
src/parser/: char_filter.rs  mod.rs  patterns.rs  stream.rs
src/process/: mod.rs  pipeline.rs
src/scope/: mod.rs  parser_builder.rs  types.rs
tests/: compatibility_test.rs  integration_test.rs
